--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: 'pip'
+          cache: 'pipenv'
       - run: pip install pipenv && pipenv install --dev
         working-directory: starter/backend
       - run: pipenv run lint
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: 'pip'
+          cache: 'pipenv'
       - run: pip install pipenv && pipenv install --dev
         working-directory: starter/backend
       - run: pipenv run test
@@ -46,7 +46,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-          cache: 'pip'
+          cache: 'pipenv'
       - run: pip install pipenv && pipenv install --dev
         working-directory: starter/backend
       - run: pipenv run test
