--- a/.github/workflows/backend-cd.yaml
+++ b/.github/workflows/backend-cd.yaml
@@ -37,10 +37,13 @@ jobs:
       - run: pipenv run test
         working-directory: starter/backend
 
-  build:
-    name: Build
+  deploy:
+    name: Deploys backend 
     runs-on: ubuntu-latest
     needs: [lint, test]
+    defaults:
+      run:
+        working-directory: ./starter/backend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
@@ -48,9 +51,7 @@ jobs:
           python-version: '3.10'
           cache: 'pipenv'
       - run: pip install pipenv && pipenv install --dev
-        working-directory: starter/backend
       - run: pipenv run test
-        working-directory: starter/backend
       - uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
