--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -66,6 +66,6 @@ jobs:
           docker push ${{ secrets.FRONTEND_URL }}:${GITHUB_SHA::7}
       - run: aws eks update-kubeconfig --name cluster --region us-east-1
       - run: |
-          cd k8s
           kustomize edit set image frontend=${{ secrets.FRONTEND_URL }}:${GITHUB_SHA::7}
           kustomize build | kubectl apply -f -
+        working-directory: ./starter/frontend/k8s
